api_versioned_docs/version-12.1.3/avalonia/controls/tooltip.mdx
---
title: 'ToolTip'
hide_title: true
slug: '/avalonia/controls/tooltip'
uid: 'Avalonia.Controls.ToolTip'
commentId: 'T:Avalonia.Controls.ToolTip'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">ToolTip Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__lead">

A control which pops up a hint when a control is hovered.

</div>

<div className="apiref-page__signature">

```csharp
public class ToolTip
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../avaloniaobject">AvaloniaObject</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../animation/animatable">Animatable</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../styledelement">StyledElement</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../visual">Visual</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../layout/layoutable">Layoutable</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../interactivity/interactive">Interactive</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../input/inputelement">InputElement</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="control">Control</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="primitives/templatedcontrol">TemplatedControl</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="contentcontrol">ContentControl</a> <span className="apiref-page__relation-separator">-&gt;</span> ToolTip
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> IPopupHostProvider
</div>
</div>

## Remarks

You will probably not want to create a [Avalonia.Controls.ToolTip](xref:Avalonia.Controls.ToolTip) control directly: if added to
the tree it will act as a simple [Avalonia.Controls.ContentControl](xref:Avalonia.Controls.ContentControl) styled to look like a tooltip.
To add a tooltip to a control, use the [Avalonia.Controls.ToolTip.TipProperty](xref:Avalonia.Controls.ToolTip.TipProperty) attached property,
assigning the content that you want displayed.

## Constructors

| Name | Description |
| --- | --- |
| [ToolTip](#uid-3e8f21b478) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-3e8f21b478"></span>

### ToolTip Constructor

```csharp
public ToolTip()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [AddHandler (2 overloads)](../interactivity/interactive.mdx#uid-02518f5b3a) | Adds a handler for the specified routed event. Inherited from [Interactive](../interactivity/interactive.mdx). |
| [AddToolTipClosingHandler](#uid-1fed2f0f7f) | No summary available. |
| [AddToolTipOpeningHandler](#uid-987260c80d) | No summary available. |
| [ApplyStyling](../styledelement.mdx#uid-b0f81a6f8f) | Applies styling to the control if the control is initialized and styling is not already applied. Inherited from [StyledElement](../styledelement.mdx). |
| [ApplyTemplate](primitives/templatedcontrol.mdx#uid-cc70dd4d2f) | Creates the visual children of the control, if necessary Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Arrange](../layout/layoutable.mdx#uid-d7a19ca8f7) | Arranges the control and its children. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [BeginInit](../styledelement.mdx#uid-91c6ccadce) | Inherited from [StyledElement](../styledelement.mdx). |
| [Bind (8 overloads)](../avaloniaobject.mdx#uid-1c60c7bda3) | Binds a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) to an [Avalonia.Data.BindingBase](xref:Avalonia.Data.BindingBase). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CheckAccess](../avaloniaobject.mdx#uid-260ff7a68d) | Returns a value indicating whether the current thread is the UI thread. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [ClearValue (4 overloads)](../avaloniaobject.mdx#uid-41de208fbe) | Clears a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty)'s local value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CoerceValue](../avaloniaobject.mdx#uid-3bec32f39e) | Coerces the specified [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [EndInit](../styledelement.mdx#uid-17b450469d) | Inherited from [StyledElement](../styledelement.mdx). |
| [Equals](../avaloniaobject.mdx#uid-a8a8e94305) | Compares two objects using reference equality. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Focus](../input/inputelement.mdx#uid-6b657af583) | Focuses the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [GetBaseValue](../avaloniaobject.mdx#uid-9c615efbba) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetBetweenShowDelay](#uid-9abead11e3) | Gets the number of milliseconds since the last tooltip closed during which the tooltip of `element` will open immediately, or a negative value indicating that the tooltip will always wait for [Avalonia.Controls.ToolTip.ShowDelayProperty](xref:Avalonia.Controls.ToolTip.ShowDelayProperty) before opening. |
| [GetCustomPopupPlacementCallback](#uid-cb868eee00) | Gets the value of the ToolTip.[CustomPopupPlacementCallback](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback) attached property. |
| [GetFlowDirection](../visual.mdx#uid-12716acd38) | Gets the value of the attached [Avalonia.Visual.FlowDirectionProperty](xref:Avalonia.Visual.FlowDirectionProperty) on a control. Inherited from [Visual](../visual.mdx). |
| [GetHashCode](../avaloniaobject.mdx#uid-7f7db1e7a2) | Gets the hash code for the object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetHorizontalOffset](#uid-5220cd3b22) | Gets the value of the ToolTip.HorizontalOffset attached property. |
| [GetIsHoldingEnabled](../input/inputelement.mdx#uid-2af9987676) | Inherited from [InputElement](../input/inputelement.mdx). |
| [GetIsHoldWithMouseEnabled](../input/inputelement.mdx#uid-0420943ecd) | Inherited from [InputElement](../input/inputelement.mdx). |
| [GetIsOpen](#uid-6dbc7fec58) | Gets the value of the ToolTip.IsOpen attached property. |
| [GetIsTemplateFocusTarget](primitives/templatedcontrol.mdx#uid-75a788f38f) | Gets the value of the IsTemplateFocusTargetProperty attached property on a control. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [GetPlacement](#uid-15ef943c61) | Gets the value of the ToolTip.Placement attached property. |
| [GetServiceEnabled](#uid-ff62ca3fc4) | Gets whether showing and hiding of a control's tooltip will be automatically controlled by Avalonia. |
| [GetShouldUseOverlayLayer](#uid-13f2eff764) | Gets whether the tooltip popup for `element` is shown in the overlay layer. |
| [GetShowDelay](#uid-5de4d71fb3) | Gets the value of the ToolTip.ShowDelay attached property. |
| [GetShowOnDisabled](#uid-07977d17f4) | Gets whether a control will display a tooltip even if it disabled. |
| [GetTip](#uid-951824cf1f) | Gets the value of the ToolTip.Tip attached property. |
| [GetValue (3 overloads)](../avaloniaobject.mdx#uid-5142cd4792) | Gets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetVerticalOffset](#uid-c7557fa6ad) | Gets the value of the ToolTip.VerticalOffset attached property. |
| [InvalidateArrange](../layout/layoutable.mdx#uid-3e9d4ebe35) | Invalidates the arrangement of the control and queues a new layout pass. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [InvalidateMeasure](../layout/layoutable.mdx#uid-31c6107bb9) | Invalidates the measurement of the control and queues a new layout pass. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [InvalidateVisual](../visual.mdx#uid-1cd22a7496) | Invalidates the visual and queues a repaint. Inherited from [Visual](../visual.mdx). |
| [IsAnimating](../avaloniaobject.mdx#uid-8cbfc7521a) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is animating. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsSet](../avaloniaobject.mdx#uid-f8bf0bbdcc) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is set on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Measure](../layout/layoutable.mdx#uid-1da410eb81) | Carries out a measure of the control. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [RaiseEvent](../interactivity/interactive.mdx#uid-d6aba452e6) | Raises a routed event. Inherited from [Interactive](../interactivity/interactive.mdx). |
| [RemoveHandler (2 overloads)](../interactivity/interactive.mdx#uid-456e485be9) | Removes a handler for the specified routed event. Inherited from [Interactive](../interactivity/interactive.mdx). |
| [RemoveToolTipClosingHandler](#uid-80ec71dfe2) | No summary available. |
| [RemoveToolTipOpeningHandler](#uid-9a7505f86f) | No summary available. |
| [Render](../visual.mdx#uid-615917604b) | Renders the visual to a [Avalonia.Media.DrawingContext](xref:Avalonia.Media.DrawingContext). Inherited from [Visual](../visual.mdx). |
| [SetBetweenShowDelay](#uid-6d4a7663ce) | Sets the number of milliseconds since the last tooltip closed during which the tooltip of `element` will open immediately. |
| [SetCurrentValue (2 overloads)](../avaloniaobject.mdx#uid-38759fd088) | Sets the value of a dependency property without changing its value source. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetCustomPopupPlacementCallback](#uid-775a741679) | Sets the value of the ToolTip.[CustomPopupPlacementCallback](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback) attached property. |
| [SetFlowDirection](../visual.mdx#uid-a670b680eb) | Sets the value of the attached [Avalonia.Visual.FlowDirectionProperty](xref:Avalonia.Visual.FlowDirectionProperty) on a control. Inherited from [Visual](../visual.mdx). |
| [SetHorizontalOffset](#uid-a20640ccad) | Sets the value of the ToolTip.HorizontalOffset attached property. |
| [SetIsHoldingEnabled](../input/inputelement.mdx#uid-90a47948ad) | Inherited from [InputElement](../input/inputelement.mdx). |
| [SetIsHoldWithMouseEnabled](../input/inputelement.mdx#uid-a494efd7c7) | Inherited from [InputElement](../input/inputelement.mdx). |
| [SetIsOpen](#uid-62d3b8a436) | Sets the value of the ToolTip.IsOpen attached property. |
| [SetIsTemplateFocusTarget](primitives/templatedcontrol.mdx#uid-281801c25f) | Sets the value of the IsTemplateFocusTargetProperty attached property on a control. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [SetPlacement](#uid-677306b137) | Sets the value of the ToolTip.Placement attached property. |
| [SetServiceEnabled](#uid-9434bf0634) | Sets whether showing and hiding of a control's tooltip will be automatically controlled by Avalonia. |
| [SetShouldUseOverlayLayer](#uid-4c6877d20c) | Sets whether the tooltip popup for `element` is shown in the overlay layer. |
| [SetShowDelay](#uid-808db44e18) | Sets the value of the ToolTip.ShowDelay attached property. |
| [SetShowOnDisabled](#uid-06108f491a) | Sets whether a control will display a tooltip even if it disabled. |
| [SetTip](#uid-e8c7f2c758) | Sets the value of the ToolTip.Tip attached property. |
| [SetValue (3 overloads)](../avaloniaobject.mdx#uid-47d14e19d7) | Sets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetVerticalOffset](#uid-340691ff6b) | Sets the value of the ToolTip.VerticalOffset attached property. |
| [TryGetResource](../styledelement.mdx#uid-2046a6b284) | Inherited from [StyledElement](../styledelement.mdx). |
| [UpdateLayout](../layout/layoutable.mdx#uid-529d4a08ea) | Executes a layout pass. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [VerifyAccess](../avaloniaobject.mdx#uid-3b9d3c9793) | Checks that the current thread is the UI thread and throws if not. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-1fed2f0f7f"></span>

### AddToolTipClosingHandler Method

```csharp
public void AddToolTipClosingHandler(Avalonia.Controls.Control element, EventHandler<Avalonia.Interactivity.RoutedEventArgs> handler)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


`handler` EventHandler&lt;[Avalonia.Interactivity.RoutedEventArgs](xref:Avalonia.Interactivity.RoutedEventArgs)&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-987260c80d"></span>

### AddToolTipOpeningHandler Method

```csharp
public void AddToolTipOpeningHandler(Avalonia.Controls.Control element, EventHandler<Avalonia.Interactivity.CancelRoutedEventArgs> handler)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


`handler` EventHandler&lt;[Avalonia.Interactivity.CancelRoutedEventArgs](xref:Avalonia.Interactivity.CancelRoutedEventArgs)&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-9abead11e3"></span>

### GetBetweenShowDelay Method

Gets the number of milliseconds since the last tooltip closed during which the tooltip of `element` will open immediately,
or a negative value indicating that the tooltip will always wait for [Avalonia.Controls.ToolTip.ShowDelayProperty](xref:Avalonia.Controls.ToolTip.ShowDelayProperty) before opening.

```csharp
public int GetBetweenShowDelay(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


#### Returns

int


</section>

<section className="apiref-page__member-entry">

<span id="uid-cb868eee00"></span>

### GetCustomPopupPlacementCallback Method

Gets the value of the ToolTip.[CustomPopupPlacementCallback](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback) attached property.

```csharp
public Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback GetCustomPopupPlacementCallback(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


#### Returns

[Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback)


</section>

<section className="apiref-page__member-entry">

<span id="uid-5220cd3b22"></span>

### GetHorizontalOffset Method

Gets the value of the ToolTip.HorizontalOffset attached property.

```csharp
public double GetHorizontalOffset(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


#### Returns

double

A value indicating how the tool tip is positioned.


</section>

<section className="apiref-page__member-entry">

<span id="uid-6dbc7fec58"></span>

### GetIsOpen Method

Gets the value of the ToolTip.IsOpen attached property.

```csharp
public bool GetIsOpen(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


#### Returns

bool

A value indicating whether the tool tip is visible.


</section>

<section className="apiref-page__member-entry">

<span id="uid-15ef943c61"></span>

### GetPlacement Method

Gets the value of the ToolTip.Placement attached property.

```csharp
public Avalonia.Controls.PlacementMode GetPlacement(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


#### Returns

[Avalonia.Controls.PlacementMode](xref:Avalonia.Controls.PlacementMode)

A value indicating how the tool tip is positioned.


</section>

<section className="apiref-page__member-entry">

<span id="uid-ff62ca3fc4"></span>

### GetServiceEnabled Method

Gets whether showing and hiding of a control's tooltip will be automatically controlled by Avalonia.

```csharp
public bool GetServiceEnabled(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


#### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-13f2eff764"></span>

### GetShouldUseOverlayLayer Method

Gets whether the tooltip popup for `element` is shown in the overlay layer.

```csharp
public bool GetShouldUseOverlayLayer(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


#### Returns

bool


#### Remarks

See [Avalonia.Controls.Primitives.Popup.ShouldUseOverlayLayer](xref:Avalonia.Controls.Primitives.Popup.ShouldUseOverlayLayer) for details.

</section>

<section className="apiref-page__member-entry">

<span id="uid-5de4d71fb3"></span>

### GetShowDelay Method

Gets the value of the ToolTip.ShowDelay attached property.

```csharp
public int GetShowDelay(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


#### Returns

int

A value indicating the time, in milliseconds, before a tool tip opens.


</section>

<section className="apiref-page__member-entry">

<span id="uid-07977d17f4"></span>

### GetShowOnDisabled Method

Gets whether a control will display a tooltip even if it disabled.

```csharp
public bool GetShowOnDisabled(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


#### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-951824cf1f"></span>

### GetTip Method

Gets the value of the ToolTip.Tip attached property.

```csharp
public object GetTip(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


#### Returns

object

The content to be displayed in the control's tooltip.


</section>

<section className="apiref-page__member-entry">

<span id="uid-c7557fa6ad"></span>

### GetVerticalOffset Method

Gets the value of the ToolTip.VerticalOffset attached property.

```csharp
public double GetVerticalOffset(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


#### Returns

double

A value indicating how the tool tip is positioned.


</section>

<section className="apiref-page__member-entry">

<span id="uid-80ec71dfe2"></span>

### RemoveToolTipClosingHandler Method

```csharp
public void RemoveToolTipClosingHandler(Avalonia.Controls.Control element, EventHandler<Avalonia.Interactivity.RoutedEventArgs> handler)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


`handler` EventHandler&lt;[Avalonia.Interactivity.RoutedEventArgs](xref:Avalonia.Interactivity.RoutedEventArgs)&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-9a7505f86f"></span>

### RemoveToolTipOpeningHandler Method

```csharp
public void RemoveToolTipOpeningHandler(Avalonia.Controls.Control element, EventHandler<Avalonia.Interactivity.CancelRoutedEventArgs> handler)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


`handler` EventHandler&lt;[Avalonia.Interactivity.CancelRoutedEventArgs](xref:Avalonia.Interactivity.CancelRoutedEventArgs)&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-6d4a7663ce"></span>

### SetBetweenShowDelay Method

Sets the number of milliseconds since the last tooltip closed during which the tooltip of `element` will open immediately.

```csharp
public void SetBetweenShowDelay(Avalonia.Controls.Control element, int value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


`value` int

The number of milliseconds to set, or a negative value to disable the behaviour.


#### Remarks

Setting a negative value disables the immediate opening behaviour. The tooltip of `element` will then always wait until
[Avalonia.Controls.ToolTip.ShowDelayProperty](xref:Avalonia.Controls.ToolTip.ShowDelayProperty) elapses before showing.

</section>

<section className="apiref-page__member-entry">

<span id="uid-775a741679"></span>

### SetCustomPopupPlacementCallback Method

Sets the value of the ToolTip.[CustomPopupPlacementCallback](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback) attached property.

```csharp
public void SetCustomPopupPlacementCallback(Avalonia.Controls.Control element, Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


`value` [Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback)


</section>

<section className="apiref-page__member-entry">

<span id="uid-a20640ccad"></span>

### SetHorizontalOffset Method

Sets the value of the ToolTip.HorizontalOffset attached property.

```csharp
public void SetHorizontalOffset(Avalonia.Controls.Control element, double value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


`value` double

A value indicating how the tool tip is positioned.


</section>

<section className="apiref-page__member-entry">

<span id="uid-62d3b8a436"></span>

### SetIsOpen Method

Sets the value of the ToolTip.IsOpen attached property.

```csharp
public void SetIsOpen(Avalonia.Controls.Control element, bool value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


`value` bool

A value indicating whether the tool tip is visible.


</section>

<section className="apiref-page__member-entry">

<span id="uid-677306b137"></span>

### SetPlacement Method

Sets the value of the ToolTip.Placement attached property.

```csharp
public void SetPlacement(Avalonia.Controls.Control element, Avalonia.Controls.PlacementMode value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


`value` [Avalonia.Controls.PlacementMode](xref:Avalonia.Controls.PlacementMode)

A value indicating how the tool tip is positioned.


</section>

<section className="apiref-page__member-entry">

<span id="uid-9434bf0634"></span>

### SetServiceEnabled Method

Sets whether showing and hiding of a control's tooltip will be automatically controlled by Avalonia.

```csharp
public void SetServiceEnabled(Avalonia.Controls.Control element, bool value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


`value` bool

Whether the control is to display a tooltip even if it disabled.


</section>

<section className="apiref-page__member-entry">

<span id="uid-4c6877d20c"></span>

### SetShouldUseOverlayLayer Method

Sets whether the tooltip popup for `element` is shown in the overlay layer.

```csharp
public void SetShouldUseOverlayLayer(Avalonia.Controls.Control element, bool value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to set the property on.


`value` bool

Whether to show the tooltip popup in the overlay layer.


#### Remarks

See [Avalonia.Controls.Primitives.Popup.ShouldUseOverlayLayer](xref:Avalonia.Controls.Primitives.Popup.ShouldUseOverlayLayer) for details.

</section>

<section className="apiref-page__member-entry">

<span id="uid-808db44e18"></span>

### SetShowDelay Method

Sets the value of the ToolTip.ShowDelay attached property.

```csharp
public void SetShowDelay(Avalonia.Controls.Control element, int value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


`value` int

A value indicating the time, in milliseconds, before a tool tip opens.


</section>

<section className="apiref-page__member-entry">

<span id="uid-06108f491a"></span>

### SetShowOnDisabled Method

Sets whether a control will display a tooltip even if it disabled.

```csharp
public void SetShowOnDisabled(Avalonia.Controls.Control element, bool value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


`value` bool

Whether the control is to display a tooltip even if it disabled.


</section>

<section className="apiref-page__member-entry">

<span id="uid-e8c7f2c758"></span>

### SetTip Method

Sets the value of the ToolTip.Tip attached property.

```csharp
public void SetTip(Avalonia.Controls.Control element, object value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


`value` object

The content to be displayed in the control's tooltip.


</section>

<section className="apiref-page__member-entry">

<span id="uid-340691ff6b"></span>

### SetVerticalOffset Method

Sets the value of the ToolTip.VerticalOffset attached property.

```csharp
public void SetVerticalOffset(Avalonia.Controls.Control element, double value)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control to get the property from.


`value` double

A value indicating how the tool tip is positioned.


</section>

## Properties

| Name | Description |
| --- | --- |
| [ActualThemeVariant](../styledelement.mdx#uid-776bcbe4bf) | Gets the UI theme that is currently used by the element, which might be different than the RequestedThemeVariantProperty. Inherited from [StyledElement](../styledelement.mdx). |
| [Background](primitives/templatedcontrol.mdx#uid-50dbd38ef5) | Gets or sets the brush used to draw the control's background. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BackgroundSizing](primitives/templatedcontrol.mdx#uid-07ef33f604) | Gets or sets how the control's background is drawn relative to the control's border. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderBrush](primitives/templatedcontrol.mdx#uid-cf666d3678) | Gets or sets the brush used to draw the control's border. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderThickness](primitives/templatedcontrol.mdx#uid-4e2cc431b4) | Gets or sets the thickness of the control's border. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Bounds](../visual.mdx#uid-a01c3022f7) | Gets the bounds of the control relative to its parent. Inherited from [Visual](../visual.mdx). |
| [CacheMode](../visual.mdx#uid-c565afad32) | Gets or sets the cache mode of the visual. Inherited from [Visual](../visual.mdx). |
| [Classes](../styledelement.mdx#uid-b7b7edea05) | Gets or sets the styled element's classes. Inherited from [StyledElement](../styledelement.mdx). |
| [Clip](../visual.mdx#uid-7623faaeaf) | Gets or sets the geometry clip for this visual. Inherited from [Visual](../visual.mdx). |
| [ClipToBounds](../visual.mdx#uid-63c348aebd) | Gets or sets a value indicating whether the control should be clipped to its bounds. Inherited from [Visual](../visual.mdx). |
| [Content](contentcontrol.mdx#uid-eab6df2df3) | Gets or sets the content to display. Inherited from [ContentControl](contentcontrol.mdx). |
| [ContentTemplate](contentcontrol.mdx#uid-d3b1dd21f9) | Gets or sets the data template used to display the content of the control. Inherited from [ContentControl](contentcontrol.mdx). |
| [ContextFlyout](control.mdx#uid-3821ce41c2) | Gets or sets a context flyout to the control Inherited from [Control](control.mdx). |
| [ContextMenu](control.mdx#uid-95e5e3ccc3) | Gets or sets a context menu to the control. Inherited from [Control](control.mdx). |
| [CornerRadius](primitives/templatedcontrol.mdx#uid-91a447dd4a) | Gets or sets the radius of the border rounded corners. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Cursor](../input/inputelement.mdx#uid-4222de38cf) | Gets or sets associated mouse cursor. Inherited from [InputElement](../input/inputelement.mdx). |
| [DataContext](../styledelement.mdx#uid-647f924a56) | Gets or sets the control's data context. Inherited from [StyledElement](../styledelement.mdx). |
| [DataTemplates](control.mdx#uid-78ff251b26) | Gets or sets the data templates for the control. Inherited from [Control](control.mdx). |
| [DesiredSize](../layout/layoutable.mdx#uid-5eb61af32f) | Gets the size that this element computed during the measure pass of the layout process. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Dispatcher](../avaloniaobject.mdx#uid-b25fa51632) | Returns the [Avalonia.AvaloniaObject.Dispatcher](xref:Avalonia.AvaloniaObject.Dispatcher) that this [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) is associated with. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Effect](../visual.mdx#uid-65e2be6b7c) | Gets or sets the effect of the control. Inherited from [Visual](../visual.mdx). |
| [FlowDirection](../visual.mdx#uid-c7929bde53) | Gets or sets the text flow direction. Inherited from [Visual](../visual.mdx). |
| [Focusable](../input/inputelement.mdx#uid-20168c45b2) | Gets or sets a value indicating whether the control can receive focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [FocusAdorner](control.mdx#uid-96de66ccc5) | Gets or sets the control's focus adorner. Inherited from [Control](control.mdx). |
| [FontFamily](primitives/templatedcontrol.mdx#uid-fc37661323) | Gets or sets the font family used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontFeatures](primitives/templatedcontrol.mdx#uid-1a7abb9411) | Gets or sets the font features turned on/off. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontSize](primitives/templatedcontrol.mdx#uid-0a8445793b) | Gets or sets the size of the control's text in points. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStretch](primitives/templatedcontrol.mdx#uid-f23e3b5938) | Gets or sets the font stretch used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStyle](primitives/templatedcontrol.mdx#uid-0d0ccbde51) | Gets or sets the font style used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontWeight](primitives/templatedcontrol.mdx#uid-967cc71125) | Gets or sets the font weight used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Foreground](primitives/templatedcontrol.mdx#uid-dff6480679) | Gets or sets the brush used to draw the control's text and other foreground elements. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [GestureRecognizers](../input/inputelement.mdx#uid-ddee464eee) | Inherited from [InputElement](../input/inputelement.mdx). |
| [HasMirrorTransform](../visual.mdx#uid-70dc13a730) | Gets or sets a value indicating whether to apply mirror transform on this control. Inherited from [Visual](../visual.mdx). |
| [Height](../layout/layoutable.mdx#uid-4334ab83b4) | Gets or sets the height of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [HorizontalAlignment](../layout/layoutable.mdx#uid-c621d98d6c) | Gets or sets the element's preferred horizontal alignment in its parent. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [HorizontalContentAlignment](contentcontrol.mdx#uid-91c4dbcd1a) | Gets or sets the horizontal alignment of the content within the control. Inherited from [ContentControl](contentcontrol.mdx). |
| [IsArrangeValid](../layout/layoutable.mdx#uid-97d1d86c71) | Gets a value indicating whether the control's layouts arrange is valid. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [IsEffectivelyEnabled](../input/inputelement.mdx#uid-48ba4c0379) | Gets a value indicating whether this control and all its parents are enabled. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsEffectivelyVisible](../visual.mdx#uid-03d6c15a63) | Gets a value indicating whether this control and all its parents are visible. Inherited from [Visual](../visual.mdx). |
| [IsEnabled](../input/inputelement.mdx#uid-31817dbbc9) | Gets or sets a value indicating whether the control is enabled for user interaction. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsFocused](../input/inputelement.mdx#uid-e4cd1a3717) | Gets a value indicating whether the control is focused. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHitTestVisible](../input/inputelement.mdx#uid-11cb006f8b) | Gets or sets a value indicating whether the control is considered for hit testing. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsInitialized](../styledelement.mdx#uid-59a7cddacb) | Gets a value that indicates whether the element has finished initialization. Inherited from [StyledElement](../styledelement.mdx). |
| [IsKeyboardFocusWithin](../input/inputelement.mdx#uid-6e5855b185) | Gets a value indicating whether keyboard focus is anywhere within the element or its visual tree child elements. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsLoaded](control.mdx#uid-7b8aa52b02) | Gets a value indicating whether the control is fully constructed in the visual tree and both layout and render are complete. Inherited from [Control](control.mdx). |
| [IsMeasureValid](../layout/layoutable.mdx#uid-2b3ce6ad30) | Gets a value indicating whether the control's layout measure is valid. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [IsPointerOver](../input/inputelement.mdx#uid-09e1553c00) | Gets a value indicating whether the pointer is currently over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsTabStop](../input/inputelement.mdx#uid-455d73fca4) | Gets or sets a value that indicates whether the control is included in tab navigation. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsVisible](../visual.mdx#uid-da2b0ca167) | Gets or sets a value indicating whether this control is visible. Inherited from [Visual](../visual.mdx). |
| [Item](../avaloniaobject.mdx#uid-c1d1f1bc0f) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [KeyBindings](../input/inputelement.mdx#uid-827a5420b2) | Inherited from [InputElement](../input/inputelement.mdx). |
| [LetterSpacing](primitives/templatedcontrol.mdx#uid-2d96a527e6) | Gets or sets the letter spacing for the control's text content. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Margin](../layout/layoutable.mdx#uid-3785e24bed) | Gets or sets the margin around the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxHeight](../layout/layoutable.mdx#uid-6ffe996277) | Gets or sets the maximum height of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxWidth](../layout/layoutable.mdx#uid-ea6041bc57) | Gets or sets the maximum width of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinHeight](../layout/layoutable.mdx#uid-822cd64c83) | Gets or sets the minimum height of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinWidth](../layout/layoutable.mdx#uid-5bd3b5bb2c) | Gets or sets the minimum width of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Name](../styledelement.mdx#uid-245f4ccff5) | Gets or sets the name of the styled element. Inherited from [StyledElement](../styledelement.mdx). |
| [Opacity](../visual.mdx#uid-9eaf1e3d57) | Gets or sets the opacity of the control. Inherited from [Visual](../visual.mdx). |
| [OpacityMask](../visual.mdx#uid-b6579b9244) | Gets or sets the opacity mask of the control. Inherited from [Visual](../visual.mdx). |
| [Padding](primitives/templatedcontrol.mdx#uid-f5271cd58d) | Gets or sets the padding placed between the border of the control and its content. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Parent](../styledelement.mdx#uid-aad2c5c78d) | Gets the styled element's logical parent. Inherited from [StyledElement](../styledelement.mdx). |
| [Presenter](contentcontrol.mdx#uid-9eb95d7b29) | Gets the presenter from the control's template. Inherited from [ContentControl](contentcontrol.mdx). |
| [RenderTransform](../visual.mdx#uid-7ee76ff32a) | Gets or sets the render transform of the control. Inherited from [Visual](../visual.mdx). |
| [RenderTransformOrigin](../visual.mdx#uid-3501120c25) | Gets or sets the transform origin of the control. Inherited from [Visual](../visual.mdx). |
| [Resources](../styledelement.mdx#uid-f6488ca4b7) | Gets or sets the styled element's resource dictionary. Inherited from [StyledElement](../styledelement.mdx). |
| [StyleKey](../styledelement.mdx#uid-081584075e) | Gets the type by which the element is styled. Inherited from [StyledElement](../styledelement.mdx). |
| [Styles](../styledelement.mdx#uid-ae663139cc) | Gets the styles for the styled element. Inherited from [StyledElement](../styledelement.mdx). |
| [TabIndex](../input/inputelement.mdx#uid-82ec6bf9ac) | Gets or sets a value that determines the order in which elements receive focus when the user navigates through controls by pressing the Tab key. Inherited from [InputElement](../input/inputelement.mdx). |
| [Tag](control.mdx#uid-2790b0c958) | Gets or sets a user-defined object attached to the control. Inherited from [Control](control.mdx). |
| [Template](primitives/templatedcontrol.mdx#uid-7a289f7bd4) | Gets or sets the template that defines the control's appearance. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [TemplatedParent](../styledelement.mdx#uid-dbf6ddacc3) | Gets the styled element whose lookless template this styled element is part of. Inherited from [StyledElement](../styledelement.mdx). |
| [Theme](../styledelement.mdx#uid-1aebed283d) | Gets or sets the theme to be applied to the element. Inherited from [StyledElement](../styledelement.mdx). |
| [Transitions](../animation/animatable.mdx#uid-1b3138f517) | Gets or sets the property transitions for the control. Inherited from [Animatable](../animation/animatable.mdx). |
| [UseLayoutRounding](../layout/layoutable.mdx#uid-5998a3d47c) | Gets or sets a value that determines whether the element should be snapped to pixel boundaries at layout time. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [VerticalAlignment](../layout/layoutable.mdx#uid-9652a1b295) | Gets or sets the element's preferred vertical alignment in its parent. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [VerticalContentAlignment](contentcontrol.mdx#uid-7225e4abe8) | Gets or sets the vertical alignment of the content within the control. Inherited from [ContentControl](contentcontrol.mdx). |
| [Width](../layout/layoutable.mdx#uid-491c41475f) | Gets or sets the width of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [ZIndex](../visual.mdx#uid-a3275ade9d) | Gets or sets the Z index of the control. Inherited from [Visual](../visual.mdx). |

## Fields

| Name | Description |
| --- | --- |
| [BackgroundProperty](primitives/templatedcontrol.mdx#uid-dbbd1ffb9b) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Background](xref:Avalonia.Controls.Primitives.TemplatedControl.Background) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BackgroundSizingProperty](primitives/templatedcontrol.mdx#uid-316d7708c4) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BackgroundSizing](xref:Avalonia.Controls.Primitives.TemplatedControl.BackgroundSizing) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BetweenShowDelayProperty](#uid-8d21ac39eb) | Defines the ToolTip.BetweenShowDelay property. |
| [BorderBrushProperty](primitives/templatedcontrol.mdx#uid-a4e6335f37) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BorderBrush](xref:Avalonia.Controls.Primitives.TemplatedControl.BorderBrush) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderThicknessProperty](primitives/templatedcontrol.mdx#uid-c41e10c675) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BorderThickness](xref:Avalonia.Controls.Primitives.TemplatedControl.BorderThickness) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BoundsProperty](../visual.mdx#uid-f22a27348f) | Defines the [Avalonia.Visual.Bounds](xref:Avalonia.Visual.Bounds) property. Inherited from [Visual](../visual.mdx). |
| [CacheModeProperty](../visual.mdx#uid-5c89b0f2fc) | Defines the [Avalonia.Visual.CacheMode](xref:Avalonia.Visual.CacheMode) property. Inherited from [Visual](../visual.mdx). |
| [ClipProperty](../visual.mdx#uid-06ffce3308) | Defines the [Avalonia.Visual.Clip](xref:Avalonia.Visual.Clip) property. Inherited from [Visual](../visual.mdx). |
| [ClipToBoundsProperty](../visual.mdx#uid-4bc41df166) | Defines the [Avalonia.Visual.ClipToBounds](xref:Avalonia.Visual.ClipToBounds) property. Inherited from [Visual](../visual.mdx). |
| [ContentProperty](contentcontrol.mdx#uid-0e2122d666) | Defines the [Avalonia.Controls.ContentControl.Content](xref:Avalonia.Controls.ContentControl.Content) property. Inherited from [ContentControl](contentcontrol.mdx). |
| [ContentTemplateProperty](contentcontrol.mdx#uid-8ca28f1907) | Defines the [Avalonia.Controls.ContentControl.ContentTemplate](xref:Avalonia.Controls.ContentControl.ContentTemplate) property. Inherited from [ContentControl](contentcontrol.mdx). |
| [ContextCanceledEvent](../input/inputelement.mdx#uid-c58107fdb9) | Provides event data for the [Avalonia.Input.InputElement.ContextCanceled](xref:Avalonia.Input.InputElement.ContextCanceled) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ContextFlyoutProperty](control.mdx#uid-7adf3cc0e6) | Defines the [Avalonia.Controls.Control.ContextFlyout](xref:Avalonia.Controls.Control.ContextFlyout) property Inherited from [Control](control.mdx). |
| [ContextMenuProperty](control.mdx#uid-0fd2af59c9) | Defines the [Avalonia.Controls.Control.ContextMenu](xref:Avalonia.Controls.Control.ContextMenu) property. Inherited from [Control](control.mdx). |
| [ContextRequestedEvent](../input/inputelement.mdx#uid-11362fc1dd) | Provides event data for the [Avalonia.Input.InputElement.ContextRequested](xref:Avalonia.Input.InputElement.ContextRequested) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [CornerRadiusProperty](primitives/templatedcontrol.mdx#uid-c7cdbfc75d) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.CornerRadius](xref:Avalonia.Controls.Primitives.TemplatedControl.CornerRadius) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [CursorProperty](../input/inputelement.mdx#uid-37a51ae89c) | Gets or sets associated mouse cursor. Inherited from [InputElement](../input/inputelement.mdx). |
| [CustomPopupPlacementCallbackProperty](#uid-b8c309c16a) | Defines the [Avalonia.Controls.Primitives.Popup.CustomPopupPlacementCallback](xref:Avalonia.Controls.Primitives.Popup.CustomPopupPlacementCallback) property. |
| [DataContextProperty](../styledelement.mdx#uid-7eefabb929) | Defines the [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext) property. Inherited from [StyledElement](../styledelement.mdx). |
| [DesiredSizeProperty](../layout/layoutable.mdx#uid-b46bed86fe) | Defines the [Avalonia.Layout.Layoutable.DesiredSize](xref:Avalonia.Layout.Layoutable.DesiredSize) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [DoubleTappedEvent](../input/inputelement.mdx#uid-932047336f) | Defines the [Avalonia.Input.InputElement.DoubleTapped](xref:Avalonia.Input.InputElement.DoubleTapped) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [EffectProperty](../visual.mdx#uid-9374086bff) | Defines the [Avalonia.Visual.Effect](xref:Avalonia.Visual.Effect) property. Inherited from [Visual](../visual.mdx). |
| [FlowDirectionProperty](../visual.mdx#uid-79d00f257f) | Defines the [Avalonia.Visual.FlowDirection](xref:Avalonia.Visual.FlowDirection) property. Inherited from [Visual](../visual.mdx). |
| [FocusableProperty](../input/inputelement.mdx#uid-402835abd7) | Defines the [Avalonia.Input.InputElement.Focusable](xref:Avalonia.Input.InputElement.Focusable) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [FocusAdornerProperty](control.mdx#uid-701a7e7e23) | Defines the [Avalonia.Controls.Control.FocusAdorner](xref:Avalonia.Controls.Control.FocusAdorner) property. Inherited from [Control](control.mdx). |
| [FontFamilyProperty](primitives/templatedcontrol.mdx#uid-fefa977c48) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontFamily](xref:Avalonia.Controls.Primitives.TemplatedControl.FontFamily) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontFeaturesProperty](primitives/templatedcontrol.mdx#uid-54c52748f8) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontFeaturesProperty](xref:Avalonia.Controls.Primitives.TemplatedControl.FontFeaturesProperty) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontSizeProperty](primitives/templatedcontrol.mdx#uid-c06c71299f) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontSize](xref:Avalonia.Controls.Primitives.TemplatedControl.FontSize) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStretchProperty](primitives/templatedcontrol.mdx#uid-d4a988cc8c) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontWeight](xref:Avalonia.Controls.Primitives.TemplatedControl.FontWeight) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStyleProperty](primitives/templatedcontrol.mdx#uid-14162a470d) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontStyle](xref:Avalonia.Controls.Primitives.TemplatedControl.FontStyle) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontWeightProperty](primitives/templatedcontrol.mdx#uid-b911f20b9f) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontWeight](xref:Avalonia.Controls.Primitives.TemplatedControl.FontWeight) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [ForegroundProperty](primitives/templatedcontrol.mdx#uid-65cd93050b) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Foreground](xref:Avalonia.Controls.Primitives.TemplatedControl.Foreground) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [GettingFocusEvent](../input/inputelement.mdx#uid-23a6940484) | Defines the [Avalonia.Input.InputElement.GettingFocus](xref:Avalonia.Input.InputElement.GettingFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [GotFocusEvent](../input/inputelement.mdx#uid-750ce32b53) | Defines the [Avalonia.Input.InputElement.GotFocus](xref:Avalonia.Input.InputElement.GotFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [HasMirrorTransformProperty](../visual.mdx#uid-1f37ec4745) | Defines the [Avalonia.Visual.HasMirrorTransform](xref:Avalonia.Visual.HasMirrorTransform) property. Inherited from [Visual](../visual.mdx). |
| [HeightProperty](../layout/layoutable.mdx#uid-78fa90222f) | Defines the [Avalonia.Layout.Layoutable.Height](xref:Avalonia.Layout.Layoutable.Height) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [HoldingEvent](../input/inputelement.mdx#uid-b1eab1bcd8) | Defines the [Avalonia.Input.InputElement.Holding](xref:Avalonia.Input.InputElement.Holding) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [HorizontalAlignmentProperty](../layout/layoutable.mdx#uid-43606c2354) | Defines the [Avalonia.Layout.Layoutable.HorizontalAlignment](xref:Avalonia.Layout.Layoutable.HorizontalAlignment) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [HorizontalContentAlignmentProperty](contentcontrol.mdx#uid-a0ed10f05c) | Defines the [Avalonia.Controls.ContentControl.HorizontalContentAlignment](xref:Avalonia.Controls.ContentControl.HorizontalContentAlignment) property. Inherited from [ContentControl](contentcontrol.mdx). |
| [HorizontalOffsetProperty](#uid-e010edf531) | Defines the ToolTip.HorizontalOffset property. |
| [IsEffectivelyEnabledProperty](../input/inputelement.mdx#uid-df18a2cff1) | Defines the [Avalonia.Input.InputElement.IsEffectivelyEnabled](xref:Avalonia.Input.InputElement.IsEffectivelyEnabled) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsEnabledProperty](../input/inputelement.mdx#uid-2f2893a804) | Defines the [Avalonia.Input.InputElement.IsEnabled](xref:Avalonia.Input.InputElement.IsEnabled) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsFocusedProperty](../input/inputelement.mdx#uid-ec811cc35b) | Defines the [Avalonia.Input.InputElement.IsFocused](xref:Avalonia.Input.InputElement.IsFocused) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHitTestVisibleProperty](../input/inputelement.mdx#uid-e774aa17ad) | Defines the [Avalonia.Input.InputElement.IsHitTestVisible](xref:Avalonia.Input.InputElement.IsHitTestVisible) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHoldingEnabledProperty](../input/inputelement.mdx#uid-a893be5e44) | Defines the IsHoldingEnabled attached property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHoldWithMouseEnabledProperty](../input/inputelement.mdx#uid-3f460ccdfe) | Defines the IsHoldWithMouseEnabled attached property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsKeyboardFocusWithinProperty](../input/inputelement.mdx#uid-2dc1dd0d3d) | Defines the [Avalonia.Input.InputElement.IsKeyboardFocusWithin](xref:Avalonia.Input.InputElement.IsKeyboardFocusWithin) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsOpenProperty](#uid-1bde912f36) | Defines the ToolTip.IsOpen attached property. |
| [IsPointerOverProperty](../input/inputelement.mdx#uid-be6c8adde2) | Defines the [Avalonia.Input.InputElement.IsPointerOver](xref:Avalonia.Input.InputElement.IsPointerOver) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsTabStopProperty](../input/inputelement.mdx#uid-ed162e7441) | Defines the [Avalonia.Input.InputElement.IsTabStop](xref:Avalonia.Input.InputElement.IsTabStop) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsTemplateFocusTargetProperty](primitives/templatedcontrol.mdx#uid-e50dcff99d) | Defines the IsTemplateFocusTarget attached property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [IsVisibleProperty](../visual.mdx#uid-8e0edf21ac) | Defines the [Avalonia.Visual.IsVisible](xref:Avalonia.Visual.IsVisible) property. Inherited from [Visual](../visual.mdx). |
| [KeyDownEvent](../input/inputelement.mdx#uid-71dfb758e3) | Defines the [Avalonia.Input.InputElement.KeyDown](xref:Avalonia.Input.InputElement.KeyDown) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [KeyUpEvent](../input/inputelement.mdx#uid-e694f9abc6) | Defines the [Avalonia.Input.InputElement.KeyUp](xref:Avalonia.Input.InputElement.KeyUp) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [LetterSpacingProperty](primitives/templatedcontrol.mdx#uid-cd0904df0e) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.LetterSpacing](xref:Avalonia.Controls.Primitives.TemplatedControl.LetterSpacing) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [LoadedEvent](control.mdx#uid-f76afcf3e6) | Defines the [Avalonia.Controls.Control.Loaded](xref:Avalonia.Controls.Control.Loaded) event. Inherited from [Control](control.mdx). |
| [LosingFocusEvent](../input/inputelement.mdx#uid-6ed71d3568) | Defines the [Avalonia.Input.InputElement.LosingFocus](xref:Avalonia.Input.InputElement.LosingFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [LostFocusEvent](../input/inputelement.mdx#uid-267344bb96) | Defines the [Avalonia.Input.InputElement.LostFocus](xref:Avalonia.Input.InputElement.LostFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [MarginProperty](../layout/layoutable.mdx#uid-e730ad0d44) | Defines the [Avalonia.Layout.Layoutable.Margin](xref:Avalonia.Layout.Layoutable.Margin) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxHeightProperty](../layout/layoutable.mdx#uid-0a0a1f20cb) | Defines the [Avalonia.Layout.Layoutable.MaxHeight](xref:Avalonia.Layout.Layoutable.MaxHeight) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxWidthProperty](../layout/layoutable.mdx#uid-febdea8f4d) | Defines the [Avalonia.Layout.Layoutable.MaxWidth](xref:Avalonia.Layout.Layoutable.MaxWidth) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinHeightProperty](../layout/layoutable.mdx#uid-f78bf9b812) | Defines the [Avalonia.Layout.Layoutable.MinHeight](xref:Avalonia.Layout.Layoutable.MinHeight) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinWidthProperty](../layout/layoutable.mdx#uid-ec0935c392) | Defines the [Avalonia.Layout.Layoutable.MinWidth](xref:Avalonia.Layout.Layoutable.MinWidth) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [NameProperty](../styledelement.mdx#uid-bcdbb9de56) | Defines the [Avalonia.StyledElement.Name](xref:Avalonia.StyledElement.Name) property. Inherited from [StyledElement](../styledelement.mdx). |
| [OpacityMaskProperty](../visual.mdx#uid-aad2c3f7c2) | Defines the [Avalonia.Visual.OpacityMask](xref:Avalonia.Visual.OpacityMask) property. Inherited from [Visual](../visual.mdx). |
| [OpacityProperty](../visual.mdx#uid-2a53e27b1f) | Defines the [Avalonia.Visual.Opacity](xref:Avalonia.Visual.Opacity) property. Inherited from [Visual](../visual.mdx). |
| [PaddingProperty](primitives/templatedcontrol.mdx#uid-8836c61358) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Padding](xref:Avalonia.Controls.Primitives.TemplatedControl.Padding) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [ParentProperty](../styledelement.mdx#uid-dc6481a488) | Defines the [Avalonia.StyledElement.Parent](xref:Avalonia.StyledElement.Parent) property. Inherited from [StyledElement](../styledelement.mdx). |
| [PinchEndedEvent](../input/inputelement.mdx#uid-3f6a3485dd) | Defines the [Avalonia.Input.InputElement.PinchEnded](xref:Avalonia.Input.InputElement.PinchEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PinchEvent](../input/inputelement.mdx#uid-d109d8c674) | Defines the [Avalonia.Input.InputElement.Pinch](xref:Avalonia.Input.InputElement.Pinch) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PlacementProperty](#uid-579133effd) | Defines the ToolTip.Placement property. |
| [PointerCaptureLostEvent](../input/inputelement.mdx#uid-e76450a6b8) | Defines the [Avalonia.Input.InputElement.PointerCaptureLost](xref:Avalonia.Input.InputElement.PointerCaptureLost) routed event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerEnteredEvent](../input/inputelement.mdx#uid-ff4d54fcc4) | Defines the [Avalonia.Input.InputElement.PointerEntered](xref:Avalonia.Input.InputElement.PointerEntered) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerExitedEvent](../input/inputelement.mdx#uid-fc90c076e6) | Defines the [Avalonia.Input.InputElement.PointerExited](xref:Avalonia.Input.InputElement.PointerExited) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerMovedEvent](../input/inputelement.mdx#uid-559b3b80ee) | Defines the [Avalonia.Input.InputElement.PointerMoved](xref:Avalonia.Input.InputElement.PointerMoved) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerPressedEvent](../input/inputelement.mdx#uid-3b7a47d5fd) | Defines the [Avalonia.Input.InputElement.PointerPressed](xref:Avalonia.Input.InputElement.PointerPressed) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerReleasedEvent](../input/inputelement.mdx#uid-f5b0e74f53) | Defines the [Avalonia.Input.InputElement.PointerReleased](xref:Avalonia.Input.InputElement.PointerReleased) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureMagnifyEvent](../input/inputelement.mdx#uid-72785e777d) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureMagnify](xref:Avalonia.Input.InputElement.PointerTouchPadGestureMagnify) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureRotateEvent](../input/inputelement.mdx#uid-409dcc6358) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureRotate](xref:Avalonia.Input.InputElement.PointerTouchPadGestureRotate) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureSwipeEvent](../input/inputelement.mdx#uid-959da18351) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureSwipe](xref:Avalonia.Input.InputElement.PointerTouchPadGestureSwipe) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerWheelChangedEvent](../input/inputelement.mdx#uid-dcb45add6a) | Defines the [Avalonia.Input.InputElement.PointerWheelChanged](xref:Avalonia.Input.InputElement.PointerWheelChanged) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PullGestureEndedEvent](../input/inputelement.mdx#uid-274f53878f) | Defines the [Avalonia.Input.InputElement.PullGestureEnded](xref:Avalonia.Input.InputElement.PullGestureEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PullGestureEvent](../input/inputelement.mdx#uid-b9a60d43c7) | Defines the [Avalonia.Input.InputElement.PullGesture](xref:Avalonia.Input.InputElement.PullGesture) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [RenderTransformOriginProperty](../visual.mdx#uid-963d266cdd) | Defines the [Avalonia.Visual.RenderTransformOrigin](xref:Avalonia.Visual.RenderTransformOrigin) property. Inherited from [Visual](../visual.mdx). |
| [RenderTransformProperty](../visual.mdx#uid-31d20942c2) | Defines the [Avalonia.Visual.RenderTransform](xref:Avalonia.Visual.RenderTransform) property. Inherited from [Visual](../visual.mdx). |
| [RequestBringIntoViewEvent](control.mdx#uid-e52a870608) | Event raised when an element wishes to be scrolled into view. Inherited from [Control](control.mdx). |
| [RightTappedEvent](../input/inputelement.mdx#uid-a67d4b1367) | Defines the [Avalonia.Input.InputElement.RightTapped](xref:Avalonia.Input.InputElement.RightTapped) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureEndedEvent](../input/inputelement.mdx#uid-5f3e85c372) | Defines the [Avalonia.Input.InputElement.ScrollGestureEnded](xref:Avalonia.Input.InputElement.ScrollGestureEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureEvent](../input/inputelement.mdx#uid-d098469113) | Defines the [Avalonia.Input.InputElement.ScrollGesture](xref:Avalonia.Input.InputElement.ScrollGesture) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureInertiaStartingEvent](../input/inputelement.mdx#uid-02f504d2ea) | Defines the [Avalonia.Input.InputElement.ScrollGestureInertiaStarting](xref:Avalonia.Input.InputElement.ScrollGestureInertiaStarting) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ServiceEnabledProperty](#uid-61f5e729d5) | Defines the ToolTip.ServiceEnabled property. |
| [ShouldUseOverlayLayerProperty](#uid-c8a06e0664) | Gets or sets a value that indicates whether the popup should be shown in the overlay layer of the parent window. |
| [ShowDelayProperty](#uid-6eb4a09aef) | Defines the ToolTip.ShowDelay property. |
| [ShowOnDisabledProperty](#uid-6060d80a54) | Defines the ToolTip.ShowOnDisabled property. |
| [SizeChangedEvent](control.mdx#uid-7d071894f4) | Defines the [Avalonia.Controls.Control.SizeChanged](xref:Avalonia.Controls.Control.SizeChanged) event. Inherited from [Control](control.mdx). |
| [SwipeGestureEndedEvent](../input/inputelement.mdx#uid-8492058651) | Defines the [Avalonia.Input.InputElement.SwipeGestureEnded](xref:Avalonia.Input.InputElement.SwipeGestureEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [SwipeGestureEvent](../input/inputelement.mdx#uid-e431c01e95) | Defines the [Avalonia.Input.InputElement.SwipeGesture](xref:Avalonia.Input.InputElement.SwipeGesture) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [TabIndexProperty](../input/inputelement.mdx#uid-3708b5bfca) | Defines the [Avalonia.Input.InputElement.TabIndex](xref:Avalonia.Input.InputElement.TabIndex) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [TagProperty](control.mdx#uid-291b4a3b79) | Defines the [Avalonia.Controls.Control.Tag](xref:Avalonia.Controls.Control.Tag) property. Inherited from [Control](control.mdx). |
| [TappedEvent](../input/inputelement.mdx#uid-15efc26145) | Defines the [Avalonia.Input.InputElement.Tapped](xref:Avalonia.Input.InputElement.Tapped) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [TemplateAppliedEvent](primitives/templatedcontrol.mdx#uid-8ed6368102) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.TemplateApplied](xref:Avalonia.Controls.Primitives.TemplatedControl.TemplateApplied) routed event. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [TemplatedParentProperty](../styledelement.mdx#uid-a2c7149a6b) | Defines the [Avalonia.StyledElement.TemplatedParent](xref:Avalonia.StyledElement.TemplatedParent) property. Inherited from [StyledElement](../styledelement.mdx). |
| [TemplateProperty](primitives/templatedcontrol.mdx#uid-888470a301) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Template](xref:Avalonia.Controls.Primitives.TemplatedControl.Template) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [TextInputEvent](../input/inputelement.mdx#uid-b82dd03ac9) | Defines the [Avalonia.Input.InputElement.TextInput](xref:Avalonia.Input.InputElement.TextInput) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [TextInputMethodClientRequestedEvent](../input/inputelement.mdx#uid-679852bb37) | Defines the [Avalonia.Input.InputElement.TextInputMethodClientRequested](xref:Avalonia.Input.InputElement.TextInputMethodClientRequested) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ThemeProperty](../styledelement.mdx#uid-05852d7b9a) | Defines the [Avalonia.StyledElement.Theme](xref:Avalonia.StyledElement.Theme) property. Inherited from [StyledElement](../styledelement.mdx). |
| [TipProperty](#uid-3be9a35a20) | Defines the ToolTip.Tip attached property. |
| [ToolTipClosingEvent](#uid-9f6e146249) | The event raised when a [ToolTip](xref:Avalonia.Controls.ToolTip) on an element that was shown should now be hidden. |
| [ToolTipOpeningEvent](#uid-06f7daf869) | The event raised when a [ToolTip](xref:Avalonia.Controls.ToolTip) is going to be shown on an element. |
| [TransitionsProperty](../animation/animatable.mdx#uid-c79f18fac2) | Defines the [Avalonia.Animation.Animatable.Transitions](xref:Avalonia.Animation.Animatable.Transitions) property. Inherited from [Animatable](../animation/animatable.mdx). |
| [UnloadedEvent](control.mdx#uid-382a8f6733) | Defines the [Avalonia.Controls.Control.Unloaded](xref:Avalonia.Controls.Control.Unloaded) event. Inherited from [Control](control.mdx). |
| [UseLayoutRoundingProperty](../layout/layoutable.mdx#uid-e6d86b68b5) | Defines the [Avalonia.Layout.Layoutable.UseLayoutRounding](xref:Avalonia.Layout.Layoutable.UseLayoutRounding) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [VerticalAlignmentProperty](../layout/layoutable.mdx#uid-b50722555e) | Defines the [Avalonia.Layout.Layoutable.VerticalAlignment](xref:Avalonia.Layout.Layoutable.VerticalAlignment) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [VerticalContentAlignmentProperty](contentcontrol.mdx#uid-5ed917028d) | Defines the [Avalonia.Controls.ContentControl.VerticalContentAlignment](xref:Avalonia.Controls.ContentControl.VerticalContentAlignment) property. Inherited from [ContentControl](contentcontrol.mdx). |
| [VerticalOffsetProperty](#uid-d293a5a63a) | Defines the ToolTip.VerticalOffset property. |
| [VisualParentProperty](../visual.mdx#uid-12214f81b9) | Defines the [Avalonia.Visual.VisualParent](xref:Avalonia.Visual.VisualParent) property. Inherited from [Visual](../visual.mdx). |
| [WidthProperty](../layout/layoutable.mdx#uid-6f3212affd) | Defines the [Avalonia.Layout.Layoutable.Width](xref:Avalonia.Layout.Layoutable.Width) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [ZIndexProperty](../visual.mdx#uid-1dc9376c1e) | Defines the [Avalonia.Visual.ZIndex](xref:Avalonia.Visual.ZIndex) property. Inherited from [Visual](../visual.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-8d21ac39eb"></span>

### BetweenShowDelayProperty Field

Defines the ToolTip.BetweenShowDelay property.

```csharp
public Avalonia.AttachedProperty<int> BetweenShowDelayProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b8c309c16a"></span>

### CustomPopupPlacementCallbackProperty Field

Defines the [Avalonia.Controls.Primitives.Popup.CustomPopupPlacementCallback](xref:Avalonia.Controls.Primitives.Popup.CustomPopupPlacementCallback) property.

```csharp
public Avalonia.AttachedProperty<Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback> CustomPopupPlacementCallbackProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e010edf531"></span>

### HorizontalOffsetProperty Field

Defines the ToolTip.HorizontalOffset property.

```csharp
public Avalonia.AttachedProperty<double> HorizontalOffsetProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1bde912f36"></span>

### IsOpenProperty Field

Defines the ToolTip.IsOpen attached property.

```csharp
public Avalonia.AttachedProperty<bool> IsOpenProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-579133effd"></span>

### PlacementProperty Field

Defines the ToolTip.Placement property.

```csharp
public Avalonia.AttachedProperty<Avalonia.Controls.PlacementMode> PlacementProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-61f5e729d5"></span>

### ServiceEnabledProperty Field

Defines the ToolTip.ServiceEnabled property.

```csharp
public Avalonia.AttachedProperty<bool> ServiceEnabledProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c8a06e0664"></span>

### ShouldUseOverlayLayerProperty Field

Gets or sets a value that indicates whether the popup should be shown in the overlay layer of the parent window.

```csharp
public Avalonia.AttachedProperty<bool> ShouldUseOverlayLayerProperty
```

#### Remarks

When [Avalonia.Controls.Primitives.Popup.ShouldUseOverlayLayer](xref:Avalonia.Controls.Primitives.Popup.ShouldUseOverlayLayer) is "false" implementation depends on the platform.
Use [Avalonia.Controls.Primitives.Popup.IsUsingOverlayLayer](xref:Avalonia.Controls.Primitives.Popup.IsUsingOverlayLayer) to get actual popup behavior.
This is an equvalent of `OverlayPopups` property of the platform options, but settable independently per each popup.

</section>

<section className="apiref-page__member-entry">

<span id="uid-6eb4a09aef"></span>

### ShowDelayProperty Field

Defines the ToolTip.ShowDelay property.

```csharp
public Avalonia.AttachedProperty<int> ShowDelayProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6060d80a54"></span>

### ShowOnDisabledProperty Field

Defines the ToolTip.ShowOnDisabled property.

```csharp
public Avalonia.AttachedProperty<bool> ShowOnDisabledProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3be9a35a20"></span>

### TipProperty Field

Defines the ToolTip.Tip attached property.

```csharp
public Avalonia.AttachedProperty<object> TipProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9f6e146249"></span>

### ToolTipClosingEvent Field

The event raised when a [ToolTip](xref:Avalonia.Controls.ToolTip) on an element that was shown should now be hidden.

```csharp
public Avalonia.Interactivity.RoutedEvent ToolTipClosingEvent
```

#### Remarks

Marking the ToolTipClosing event as handled does not cancel closing the tooltip.
Once the tooltip is displayed, closing the tooltip is done only in response to user interaction with the UI.

</section>

<section className="apiref-page__member-entry">

<span id="uid-06f7daf869"></span>

### ToolTipOpeningEvent Field

The event raised when a [ToolTip](xref:Avalonia.Controls.ToolTip) is going to be shown on an element.

```csharp
public Avalonia.Interactivity.RoutedEvent<Avalonia.Interactivity.CancelRoutedEventArgs> ToolTipOpeningEvent
```

#### Remarks

To prevent a tooltip from appearing in the UI, your handler for ToolTipOpening can mark the event data handled.
Otherwise, the tooltip is displayed, using the value of the [ToolTip](xref:Avalonia.Controls.ToolTip) property as the tooltip content.
Another possible scenario is that you could write a handler that resets the value of the [ToolTip](xref:Avalonia.Controls.ToolTip) property for the element that is the event source, just before the tooltip is displayed.
ToolTipOpening will not be raised if the value of [ToolTip](xref:Avalonia.Controls.ToolTip) is null or otherwise unset. Do not deliberately set [ToolTip](xref:Avalonia.Controls.ToolTip) to null while a tooltip is open or opening; this will not have the effect of closing the tooltip, and will instead create an undesirable visual artifact in the UI.

</section>

<section className="apiref-page__member-entry">

<span id="uid-d293a5a63a"></span>

### VerticalOffsetProperty Field

Defines the ToolTip.VerticalOffset property.

```csharp
public Avalonia.AttachedProperty<double> VerticalOffsetProperty
```

</section>

## Events

| Name | Description |
| --- | --- |
| [ActualThemeVariantChanged](../styledelement.mdx#uid-e69ef27e71) | Raised when the theme variant is changed on the element or an ancestor of the element. Inherited from [StyledElement](../styledelement.mdx). |
| [AttachedToLogicalTree](../styledelement.mdx#uid-717aa68e85) | Raised when the styled element is attached to a rooted logical tree. Inherited from [StyledElement](../styledelement.mdx). |
| [AttachedToVisualTree](../visual.mdx#uid-df40bddf6b) | Raised when the control is attached to a rooted visual tree. Inherited from [Visual](../visual.mdx). |
| [ContextCanceled](../input/inputelement.mdx#uid-0132e74ca9) | Occurs when the context input gesture continues into another gesture, to notify the element that the context flyout should not be opened. Inherited from [InputElement](../input/inputelement.mdx). |
| [ContextRequested](../input/inputelement.mdx#uid-9067484d6e) | Occurs when the user has completed a context input gesture, such as a right-click. Inherited from [InputElement](../input/inputelement.mdx). |
| [DataContextChanged](../styledelement.mdx#uid-4b1cc873f8) | Occurs when the [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext) property changes. Inherited from [StyledElement](../styledelement.mdx). |
| [DetachedFromLogicalTree](../styledelement.mdx#uid-d9f5afa535) | Raised when the styled element is detached from a rooted logical tree. Inherited from [StyledElement](../styledelement.mdx). |
| [DetachedFromVisualTree](../visual.mdx#uid-3f64dafb1c) | Raised when the control is detached from a rooted visual tree. Inherited from [Visual](../visual.mdx). |
| [DoubleTapped](../input/inputelement.mdx#uid-ad13083e0c) | Occurs when the user briefly contacts and releases twice on a single point, without significant movement. Inherited from [InputElement](../input/inputelement.mdx). |
| [EffectiveViewportChanged](../layout/layoutable.mdx#uid-1922b89fa5) | Occurs when the element's effective viewport changes. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [GettingFocus](../input/inputelement.mdx#uid-4d054164ee) | Occurs before the control receives focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [GotFocus](../input/inputelement.mdx#uid-d41d7ad59c) | Occurs when the control receives focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [Holding](../input/inputelement.mdx#uid-8cda030fe2) | Occurs when the user makes a single contact, then maintains contact beyond a given time threshold without releasing or making another contact. Inherited from [InputElement](../input/inputelement.mdx). |
| [Initialized](../styledelement.mdx#uid-bd6a5e5c0e) | Occurs when the styled element has finished initialization. Inherited from [StyledElement](../styledelement.mdx). |
| [KeyDown](../input/inputelement.mdx#uid-ee9d987ed5) | Occurs when a key is pressed while the control has focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [KeyUp](../input/inputelement.mdx#uid-1131e95f55) | Occurs when a key is released while the control has focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [LayoutUpdated](../layout/layoutable.mdx#uid-05ea32f689) | Occurs when a layout pass completes for the control. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Loaded](control.mdx#uid-c0a1ac2bc3) | Occurs when the control has been fully constructed in the visual tree and both layout and render are complete. Inherited from [Control](control.mdx). |
| [LosingFocus](../input/inputelement.mdx#uid-425fe24716) | Occurs before the control loses focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [LostFocus](../input/inputelement.mdx#uid-2061fc85a1) | Occurs when the control loses focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [Pinch](../input/inputelement.mdx#uid-96b68421dc) | Occurs when the user moves two contact points closer together. Inherited from [InputElement](../input/inputelement.mdx). |
| [PinchEnded](../input/inputelement.mdx#uid-50614bd917) | Occurs when the user releases both contact points used in a pinch gesture. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerCaptureLost](../input/inputelement.mdx#uid-2121c500a4) | Occurs when the control or its child control loses the pointer capture for any reason, event will not be triggered for a parent control if capture was transferred to another child of that parent control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerEntered](../input/inputelement.mdx#uid-a81f2c5c9a) | Occurs when the pointer enters the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerExited](../input/inputelement.mdx#uid-522e8d0a47) | Occurs when the pointer leaves the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerMoved](../input/inputelement.mdx#uid-0990295ea3) | Occurs when the pointer moves over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerPressed](../input/inputelement.mdx#uid-913cdc0df1) | Occurs when the pointer is pressed over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerReleased](../input/inputelement.mdx#uid-5b59b21d5e) | Occurs when the pointer is released over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureMagnify](../input/inputelement.mdx#uid-8f1fe6dc4a) | Occurs when the user moves two contact points away from each other on a touchpad. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureRotate](../input/inputelement.mdx#uid-d966c43661) | Occurs when the user places two contact points and moves them in a circular motion on a touchpad. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureSwipe](../input/inputelement.mdx#uid-9011c6de89) | Occurs when the user performs a rapid dragging motion in a single direction on a touchpad. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerWheelChanged](../input/inputelement.mdx#uid-6687ab6f2e) | Occurs when the mouse is scrolled over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PropertyChanged](../avaloniaobject.mdx#uid-d758e26fae) | Raised when a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value changes on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [PullGesture](../input/inputelement.mdx#uid-d85f52cac5) | Occurs when the user drags from the edge of a control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PullGestureEnded](../input/inputelement.mdx#uid-a37f51b846) | Occurs when the user releases the pointer after a pull gesture. Inherited from [InputElement](../input/inputelement.mdx). |
| [ResourcesChanged](../styledelement.mdx#uid-99a7f47c56) | Occurs when a resource in this styled element or a parent styled element has changed. Inherited from [StyledElement](../styledelement.mdx). |
| [RightTapped](../input/inputelement.mdx#uid-11a576692d) | Occurs when the user briefly contacts and releases a single point, without significant movement, using a mechanism on the input device recognized as a right button or equivalent. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGesture](../input/inputelement.mdx#uid-b571ab3acc) | Occurs when the user continuously moves the pointer in the same direction within the control’s boundaries. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureEnded](../input/inputelement.mdx#uid-eb3914c3a8) | Occurs when a scroll gesture has fully stopped, taking into account any inertial movement that continues the scroll after the user has released the pointer. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureInertiaStarting](../input/inputelement.mdx#uid-c8cd2731a5) | Occurs within a scroll gesture, when the user releases the pointer, and scrolling continues by transitioning to momentum-based gliding movement. Inherited from [InputElement](../input/inputelement.mdx). |
| [SizeChanged](control.mdx#uid-6cfea6b6c5) | Occurs when the bounds (actual size) of the control have changed. Inherited from [Control](control.mdx). |
| [SwipeGesture](../input/inputelement.mdx#uid-0f4fc613ec) | Occurs when the user rapidly drags the pointer in a single direction across the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [SwipeGestureEnded](../input/inputelement.mdx#uid-137ae2fd9d) | Occurs when a swipe gesture ends on the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [Tapped](../input/inputelement.mdx#uid-6df36c079d) | Occurs when the user briefly contacts and releases a single point, without significant movement. Inherited from [InputElement](../input/inputelement.mdx). |
| [TemplateApplied](primitives/templatedcontrol.mdx#uid-d353f79b7c) | Raised when the control's template is applied. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [TextInput](../input/inputelement.mdx#uid-6dcb8fae07) | Occurs when a user typed some text while the control has focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [TextInputMethodClientRequested](../input/inputelement.mdx#uid-5d96b89080) | Occurs when an input element gains input focus and input method is looking for the corresponding client Inherited from [InputElement](../input/inputelement.mdx). |
| [Unloaded](control.mdx#uid-fdfd878e56) | Occurs when the control is removed from the visual tree. Inherited from [Control](control.mdx). |

</ApiRefPage>

